# ema-diff

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.py
emaDiff/: __init__.py  _version.py  ematypes.py
emaDiff/cli/: __init__.py  cli.py
emaDiff/cli/utils/: utils_functions.py
emaDiff/dif/: __init__.py  calibration.py  io.py  log_module.py  parallel_scan.py  read_tiff.py  scan.py
emaDiff/dif/tests/: __init__.py  test_io.py
examples/: emaDiff-multiple-scans.ipynb
src/: __init__.py  _version.py  diftypes.py
src/cli/: cli.py
src/cli/utils/: __init__.py
src/dif/: __init__.py  calibration.py  io.py  scan.py
